# muyu

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  skills-lock.json
backend/: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py  platforms.py  scheduler.py
backend/app/api/: __init__.py  ai_news.py  health.py  home.py  market.py  online.py  sources.py  trends.py
backend/app/cache/: __init__.py  policy.py  sqlite.py
backend/app/clients/: __init__.py  ai_news_fetcher.py  akshare.py  cn_market.py  seesea.py  tdx_market.py  umami.py
backend/app/jobs/: __init__.py  refresh_cn_market.py
backend/app/lib/: china_holidays.py
backend/app/models/: __init__.py  ai_news.py  calendar.py  cn_market.py  common.py  home.py  market.py  online.py  source.py  trend.py
backend/seesea/: .gitignore  LICENSE  NOTICE  README.md  README_EN.md
backend/seesea/.github/workflows/: ci-cd.yml
backend/seesea/config/: default.toml  development.toml
backend/seesea/docs/: openapi.json
backend/seesea/examples/: 01_search_demo.py  02_rss_demo.py  03_stock_demo.py  04_cache_demo.py  05_cleaner_demo.py
backend/seesea/seesea/: mypy.ini  pyproject.toml
backend/seesea/seesea-command/: App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json  types.ts
backend/seesea/seesea-command/components/: CachePanel.tsx  ConfigPanel.tsx  CustomSelect.tsx  Dashboard.tsx  EnginesPanel.tsx  FallbackUI.tsx  Header.tsx  LogsPanel.tsx  Sidebar.tsx
backend/seesea/seesea-command/hooks/: useCache.ts  useConfig.ts  useEngines.ts  useLogs.ts  useSystemStatus.ts
backend/seesea/seesea-command/services/: api.ts
backend/seesea/seesea-core/: Cargo.toml  README.md  pyproject.toml  workspace_update.toml
backend/seesea/seesea-core/config/: scheduler.toml
backend/seesea/seesea-core/crates/: lib.rs  main.rs
backend/seesea/seesea-core/crates/error/: Cargo.toml  README.md  mod.rs
backend/seesea/seesea-core/crates/error-derive/: Cargo.toml
backend/seesea/seesea-core/crates/error-derive/src/: lib.rs
backend/seesea/seesea-core/crates/error/examples/: advanced_features.rs  basic.rs  error_chain.rs  result_type.rs
backend/seesea/seesea-core/crates/error/src/: lib.rs
backend/seesea/seesea-core/crates/error/tests/: derive_tests.rs
backend/seesea/seesea-core/crates/seesea-api/: Cargo.toml
backend/seesea/seesea-core/crates/seesea-api/src/: lib.rs
backend/seesea/seesea-core/crates/seesea-api/tests/: mod.rs  test_api_types.rs  test_error_handling.rs  test_handlers.rs  test_integration.rs  test_middleware.rs  test_performance.rs  test_security.rs  test_utils.rs
backend/seesea/seesea-core/crates/seesea-cache/: Cargo.toml
backend/seesea/seesea-core/crates/seesea-cache/src/: lib.rs
backend/seesea/seesea-core/crates/seesea-cleaner/: Cargo.toml
backend/seesea/seesea-core/crates/seesea-cleaner/src/: ant_colony.rs  cleaner.rs  concurrent.rs  data_block.rs  date_page.rs  lib.rs  md_parser.rs  object_pool.rs  simd_utils.rs  splitter.rs  zero_copy.rs
backend/seesea/seesea-core/crates/seesea-config/: Cargo.toml
backend/seesea/seesea-core/crates/seesea-config/src/: common.rs  config.rs  general.rs  lib.rs  loader.rs  mod.rs  on.rs  paths.rs  types.rs  validator.rs
backend/seesea/seesea-core/crates/seesea-derive/: Cargo.toml
backend/seesea/seesea-core/crates/seesea-derive/src/: engine.rs  errors.rs  lib.rs  macros.rs  mod.rs  query.rs  result.rs  rss.rs  types.rs
backend/seesea/seesea-core/crates/seesea-derive/tests/: edge_cases_test.rs  engine_test.rs  errors_test.rs  integration_test.rs  macros_test.rs  query_result_test.rs  types_test.rs
backend/seesea/seesea-core/crates/seesea-errors/: Cargo.toml  README.md
backend/seesea/seesea-core/crates/seesea-errors/src/: base.rs  business.rs  (+11 more)
backend/seesea/seesea-core/crates/seesea-event/: Cargo.toml  workspace.toml
backend/seesea/seesea-core/crates/seesea-hot/: Cargo.toml
backend/seesea/seesea-core/crates/seesea-net/: Cargo.toml
backend/seesea/seesea-core/crates/seesea-python-bindings/: Cargo.toml
backend/seesea/seesea-core/crates/seesea-raming/: Cargo.toml
backend/seesea/seesea-core/crates/seesea-rss/: Cargo.toml
backend/seesea/seesea-core/crates/seesea-search/: Cargo.toml
backend/seesea/seesea-core/crates/seesea-stock/: Cargo.toml  records
backend/seesea/seesea-core/crates/seesea-sys/: Cargo.toml
backend/seesea/seesea-core/crates/seesea-vector-store/: Cargo.toml
backend/seesea/seesea-core/docs/python-bindings/: README.md  browser.md  cache.md  cleaner.md  config.md  embedding_callback.md  network.md  object_pool.md  rss.md  search.md  system_controller.md  trending.md  vector_store.md
backend/seesea/seesea-core/rss/template/: people.rss.see  xinhua.rss.see
backend/seesea/seesea-core/seesea-static/: pro_flow_diagram.html
backend/seesea/seesea-core/seesea-static/html/: index.html
backend/seesea/seesea-expand/llm/: __init__.py
backend/seesea/seesea-expand/llm/agent/: __init__.py
backend/seesea/seesea-expand/llm/base/: __init__.py  llm_base.py  openai_llm.py
backend/seesea/seesea-expand/llm/embeddings/: __init__.py  llama_cpp_embeddings.py
backend/seesea/seesea-expand/llm/local/: __init__.py  local_llm.py
backend/seesea/seesea/seesea/: __init__.py  __main__.py  cli.py
backend/seesea/seesea/seesea/browser/: __init__.py  base.py  pool.py  xinhua.py
backend/seesea/seesea/seesea/embeddings/: __init__.py  manager.py  pro.py  simple.py  standard.py
backend/seesea/seesea/seesea/handlers/: __init__.py
backend/seesea/seesea/seesea/mcp/: __init__.py  cleaner.py  hot.py  rss.py  search.py  stock.py
backend/seesea/seesea/seesea/models/: __init__.py
backend/seesea/seesea/seesea/sdk/: __init__.py
backend/seesea/seesea/seesea/utils/: __init__.py  formatters.py  platform_paths.py  url_to_markdown.py
backend/seesea/tests/: __init__.py  integration_test.rs  test_force_search.rs  test_python_sdk.py  test_rss.rs  test_semantic_cache.rs
backend/tests/: conftest.py  test_api_endpoints.py  test_china_holidays.py  test_tdx_market.py
(+340 files in other folders)
