[package]
name = "SeeSea"
version = "2.2.2"
edition = "2024"

description = "SeeSea - A privacy-focused data aggregation platform with search, RSS, hot trends, and AI enhancement"

keywords = ["search", "metasearch", "rust", "privacy", "tor", "proxy", "python", "rss", "ai"]

license = "AGPL-3.0-or-later"
readme = "README.md"

[lib]
name = "seesea_core"
crate-type = ["cdylib", "rlib"]
path = "crates/lib.rs"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.7", features = ["json"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
html-escape = "0.2.13"
num_cpus = "1.17.0"
rayon = "1.11.0"
proc-macro2 = { version = "1.0.103", optional = true }
quote = { version = "1.0.42", optional = true }
regex = "1.12.2"
reqwest = { version = "0.12.25", features = ["brotli", "cookies", "deflate", "gzip", "json", "rustls-tls", "stream"] }
encoding_rs = "0.8.35"
scraper = { version = "0.24.0", optional = true, features = ["default"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_urlencoded = "0.7"
syn = { version = "2.0.111", optional = true }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.7"
idna = "1.1.0"
qdrant-client = { version = "1.16.0", features = ["reqwest"] }
dashmap = "6.1"
urlencoding = "2.1.3"
rand = "0.9.2"
once_cell = "1.21.3"
sysinfo = "0.30.13"

# 跨平台SIMD和零拷贝依赖
wide = "1.1.0"  # 跨平台SIMD库
simd-adler32 = "0.3.8"  # SIMD优化的Adler32算法
memmap2 = "0.9.9"  # 跨平台内存映射，用于零拷贝
bytemuck = { version = "1.24.0", features = ["derive"] }  # 安全的字节转换
crossbeam = "0.8.4"  # 跨平台并发原语

# 内部依赖 - 错误处理模块
seesea-errors = { path = "crates/seesea-errors" }

# 工作区依赖 - derive库
seesea-derive = { path = "crates/seesea-derive" }
# 工作区依赖 - 热点数据模块
seesea-hot = { path = "crates/seesea-hot" }
# 工作区依赖 - 配置模块
seesea-config = { path = "crates/seesea-config" }
# 工作区依赖 - 缓存模块
seesea-cache = { path = "crates/seesea-cache" }
# 工作区依赖 - 网络模块
seesea-net = { path = "crates/seesea-net" }
# 工作区依赖 - 搜索模块
seesea-search = { path = "crates/seesea-search" }
# 工作区依赖 - API模块
seesea-api = { path = "crates/seesea-api", features = ["python"] }
# 工作区依赖 - RSS模块
seesea-rss = { path = "crates/seesea-rss" }
# 工作区依赖 - 向量存储模块
seesea-vector-store = { path = "crates/seesea-vector-store" }
# 工作区依赖 - 系统模块
seesea-sys = { path = "crates/seesea-sys" }
# 工作区依赖 - 清洗模块
seesea-cleaner = { path = "crates/seesea-cleaner" }
bincode = { version = "2.0.1", features = ["serde"] }
tokio-rustls = "0.26.4"

fastrand = "2.3.0"
lazy_static = "1.5.0"
html5ever = { version = "0.36.1", optional = true }
select = { version = "0.6.1", optional = true }
futures = "0.3.31"
async-stream = "0.3.6"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
indicatif = "0.17.11"
tower-http = { version = "0.6.8", features = ["cors", "trace", "fs"] }
tower = { version = "0.5", features = ["limit", "load-shed", "timeout", "util"] }
governor = "0.6"
jsonwebtoken = "9.3"
sha2 = "0.10"
uuid = { version = "1.19", features = ["v4", "serde"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
pyo3 = { version = "0.27.2", features = ["extension-module"], optional = true }
pyo3-async-runtimes = { version = "0.27.0", features = ["tokio-runtime"], optional = true }
tokio-util = "0.7.17"

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
dirs = "4.0.0"

[dev-dependencies]
tempfile = "3.23.0"
serial_test = "3.2.0"
temp-env = "0.3.6"
tokio-test = "0.4.4"

[[bin]]
name = "SeeSea"
path = "crates/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[features]
default = ["scraper", "html5ever"]
derive = ["proc-macro2", "quote", "syn"]
proc-macro2 = ["dep:proc-macro2"]
quote = ["dep:quote"]
syn = ["dep:syn"]
scraper = ["dep:scraper"]
html5ever = ["dep:html5ever"]
select = ["dep:select"]
python = ["pyo3", "pyo3-async-runtimes"]
pyo3 = ["dep:pyo3"]
pyo3-async-runtimes = ["dep:pyo3-async-runtimes"]

[workspace]
members = [
    "crates/seesea-derive",
    "crates/seesea-errors", 
    "crates/seesea-rss",
    "crates/seesea-net",
    "crates/seesea-config",
    "crates/seesea-cache",
    "crates/seesea-search",
    "crates/seesea-api",
    "crates/seesea-sys",
    "crates/seesea-hot",
    "crates/seesea-vector-store",
    "crates/seesea-cleaner",
    "crates/seesea-python-bindings",
    "crates/seesea-event",
    "crates/seesea-raming",
    "crates/seesea-stock",
    "crates/error",
    "crates/error-derive",
]
