[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "seesea-core"
version = "2.2.2"
description = "SeeSea Rust core module - High-performance privacy-focused data aggregation platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}
keywords = ["search", "metasearch", "privacy", "rust", "rss", "hot-trends", "ai", "vector-database"]
authors = [
    {name = "nostalgiatan", email = "heavenly@nostalgiatan.top"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[tool.maturin]
features = ["python"]
module-name = "seesea_core"
manifest-path = "crates/seesea-python-bindings/Cargo.toml"
strip = true
include = [
    "rss/template/*.see",
    "seesea-static/html/*",
    "seesea-static/html/**/*"
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
exclude = "build"
ignore_missing_imports = true
install_types = true
follow_imports = "silent"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["seesea/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
