[build-system]
requires = ["setuptools>=61.0", "wheel", "build>=0.10.0"]
build-backend = "setuptools.build_meta"


[project]
name = "seesea"
version = "2.2.2"
description = "SeeSea Python SDK - Privacy-focused metasearch engine"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}
keywords = ["search", "metasearch", "privacy", "sdk"]
authors = [
    {name = "nostalgiatan"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    'seesea-core>=2.0.4',
    'psutil>=7.1.3',
    'akshare>=1.15.0',
    'pandas>=2.2.0',
    'numpy>=2.0.0',
    'pypinyin>=0.52.0',
    'click>=8.3.1',
    'rich>=14.3.3',
]

[project.scripts]
seesea = "seesea.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "black>=24.0",
    "mypy>=1.11",
    "ruff>=0.8",
]
mcp = [
    "fastmcp>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/nostalgiatan/SeeSea"
Repository = "https://github.com/nostalegan/SeeSea"
Documentation = "https://github.com/nostalegan/SeeSea/blob/main/docs"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (require network)"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["seesea", "seesea.*"]
exclude = ["tests", "tests.*"]
