[package]
name = "seesea-api"
version = "2.2.2"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower = { version = "0.5", features = ["limit", "load-shed", "timeout", "util"] }
tower-http = { version = "0.6.8", features = ["cors", "trace", "fs"] }
jsonwebtoken = "9.3"
uuid = { version = "1.19", features = ["v4", "serde"] }
metrics = "0.24"
governor = "0.6"
dashmap = "6.1"
once_cell = "1.21.3"
seesea-errors = { path = "../seesea-errors" }
seesea-config = { path = "../seesea-config" }
seesea-search = { path = "../seesea-search" }
seesea-cache = { path = "../seesea-cache" }
seesea-net = { path = "../seesea-net" }
seesea-hot = { path = "../seesea-hot" }
seesea-rss = { path = "../seesea-rss" }
seesea-sys = { path = "../seesea-sys" }
seesea-derive = { path = "../seesea-derive" }
seesea-event = { path = "../seesea-event" }
seesea-stock = { path = "../seesea-stock" }
lazy_static = "1.5"
serde_urlencoded = "0.7"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
sha2 = "0.10"
metrics-exporter-prometheus = "0.15"
chrono = { version = "0.4", features = ["serde"] }
pyo3 = { version = "0.27.2", optional = true }
utoipa = { version = "5.3", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa-axum = "0.1"

[features]
default = ["stock"]
python = ["pyo3"]
stock = []

[dev-dependencies]
tokio-test = "0.4.4"
rand = "0.8"
regex = "1.0"
futures = "0.3"