[package]
name = "seesea-cache"
version = "2.2.2"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rocksdb = { version = "0.24", default-features = false, features = ["multi-threaded-cf", "bindgen-runtime", "snappy", "lz4", "zstd", "zlib", "bzip2"] }
once_cell = "1.21.3"
dashmap = "6.1"
tokio = { version = "1.48.0", features = ["sync", "rt", "macros"] }
bincode = { version = "2.0.0", features = ["serde"] }
seesea-errors = { path = "../seesea-errors" }
seesea-config = { path = "../seesea-config" }
thiserror = "1.0"
seesea-derive = { path = "../seesea-derive" }
tracing = "0.1"

[dev-dependencies]
tempfile = "3.23.0"
tokio-test = "0.4.4"
serial_test = "3.2.0"