[package]
name = "seesea-cleaner"
version = "2.2.2"
edition = "2024"

[dependencies]
seesea-errors = { path = "../seesea-errors" }
seesea-config = { path = "../seesea-config" }
seesea-sys = { path = "../seesea-sys" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
once_cell = "1.21.3"
dashmap = "6.1"
tracing = "0.1.41"
parking_lot = "0.12.3"
rayon = "1.11.0"
wide = "1.1.1"
chrono = { version = "0.4.42", features = ["serde"] }
regex = "1.12.2"
pulldown-cmark = "0.12.2"
num_cpus = "1.16.0"
memmap2 = "0.9"

[dev-dependencies]
tokio-test = "0.4.4"