[package]
name = "seesea-config"
version = "2.2.2"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"
once_cell = "1.21.3"
chrono = { version = "0.4.42", features = ["serde"] }
dirs = "4.0.0"
tokio = { version = "1.48.0", features = ["fs", "sync"] }
tracing = "0.1.41"
seesea-errors = { path = "../seesea-errors" }
uuid = { version = "1.15", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.23.0"
serial_test = "3.2.0"
temp-env = "0.3.6"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time"] }