[package]
name = "seesea-derive"
version = "2.2.2"
edition = "2024"

[lib]
name = "seesea_derive"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
url = "2.5.7"
tracing = "0.1.43"
urlencoding = "2.1.3"
html-escape = "0.2.13"
tokio = { version = "1.48.0", features = ["time"] }
error = { path = "../error" }
seesea-errors = { path = "../seesea-errors" }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full", "test-util"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
mockall = "0.13.0"
pretty_assertions = "1.4.1"
futures = "0.3.31"