[package]
name = "seesea-search"
version = "2.2.2"
edition = "2024"

[features]
default = []
python = []

[dependencies]
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.25", features = ["json"] }
regex = "1.12.2"
scraper = { version = "0.24.0", features = ["default"] }
url = "2.5.7"
tokio = { version = "1.48.0", features = ["full"] }
once_cell = "1.21.3"
futures = "0.3.31"
dashmap = "6.1"
rand = "0.8.5"
html-escape = "0.2.13"
num_cpus = "1.16.0"
urlencoding = "2.1.3"
chrono = { version = "0.4.40", features = ["serde"] }
sysinfo = "0.38"
tracing = "0.1"
lazy_static = "1.4"
base64 = "0.22"
seesea-derive = { path = "../seesea-derive" }
seesea-errors = { path = "../seesea-errors" }
seesea-config = { path = "../seesea-config" }
seesea-cache = { path = "../seesea-cache" }
seesea-net = { path = "../seesea-net" }
seesea-sys = { path = "../seesea-sys" }
seesea-cleaner = { path = "../seesea-cleaner" }
seesea-raming = { path = "../seesea-raming" }
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4.4"