[package]
name = "seesea-stock"
version = "2.2.2"
edition = "2024"
description = "Stock data module for SeeSea - fetches data from akshare via PyO3"
authors = ["nostalgiatan"]
license = "AGPL-3.0-or-later"

[[bin]]
name = "stock-cli"
path = "src/bin/cli.rs"

[dependencies]
seesea-errors = { path = "../seesea-errors" }
seesea-cache = { path = "../seesea-cache" }
seesea-config = { path = "../seesea-config" }

pyo3 = { version = "0.27.2", features = [] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
once_cell = "1.21.3"
parking_lot = "0.12"
rayon = "1.10"
chrono = "0.4"
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4.4"

[features]
default = []
