[package]
name = "seesea-sys"
version = "2.2.2"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
sysinfo = "0.38"
num_cpus = "1.17.0"
serde_json = "1.0.133"
rand = "0.8.5"
once_cell = "1.20.2"
async-trait = "0.1.83"
seesea-errors = { path = "../seesea-errors" }
seesea-config = { path = "../seesea-config" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemInformation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_System_Ioctl",
    "Win32_System_WindowsProgramming"
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
mach = "0.3"
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4.4"