[package]
name = "seesea-vector-store"
version = "2.2.2"
edition = "2024"

[dependencies]
seesea-errors = { path = "../seesea-errors" }
seesea-config = { path = "../seesea-config" }
seesea-cache = { path = "../seesea-cache" }
seesea-sys = { path = "../seesea-sys" }
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
qdrant-client = "1.12.0"
once_cell = "1.21.3"
dashmap = "6.1"
tracing = "0.1.41"
futures = "0.3.31"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4.4"